[package]
name = "env_file"
version = "0.1.3"
authors = ["Sergey Elantsev <elantsev.s@yandex.ru>"]
license = "MIT"
repository = "https://github.com/serejkus/env_file"
homepage = "https://github.com/serejkus/env_file"
documentation = "https://docs.rs/env_file/"
description = """
Reading files with name taken from environment variable
"""
keywords = ["env", "file"]

[dev-dependencies]
rand = "0.3"

[badges]
travis-ci = { repository = "serejkus/env_file" }
